更新本地化 & 将Compose函数移动到view包下

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">Make MIUI Great Again</string>
+    <string name="app_name" translatable="false">Make MIUI Great Again</string>
+    <string name="card_title_about">About</string>
+    <string name="card_title_gallery">Gallery</string>
+    <string name="card_title_systemui">System UI</string>
+    <string name="gallery_function_unlimited_crop">Unlimited crop</string>
+    <string name="gallery_function_unlimited_crop_desc">Unlimited crop size!</string>
 </resources>
