--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -5,4 +5,7 @@
     <string name="card_title_systemui">系统UI</string>
     <string name="gallery_function_unlimited_crop">无限裁剪</string>
     <string name="gallery_function_unlimited_crop_desc">无限制的裁剪大小！</string>
+    <string name="module_version_title">模块版本</string>
+    <string name="jump_to_github_title">浏览项目</string>
+    <string name="jump_to_github_desc">点个Star吧！</string>
 </resources>
